2015-01-04  Moritz Bunkus  <moritz@bunkus.org>

        * Released v1.3.1.

2014-12-21  Moritz Bunkus  <moritz@bunkus.org>

        * build system: switched the build system from hand-crafted
        Makefiles to an autoconf/automake-based system. A pkg-config file
        will be installed as well; its name is »libebml«. Patch by Jan
        Engelhardt <jengelh@inai.de>.

2014-12-20  Moritz Bunkus  <moritz@bunkus.org>

        * EbmlMaster::Read(): when reading with SCOPE_ALL_DATA only those
        elements that could successfully be read will be kept
        (e.g. defective block groups will be dropped).

2014-12-19  Moritz Bunkus  <moritz@bunkus.org>

        * EbmlMemoryStream: add a new class for safe memory access that
        throws exception on failures.

2014-12-18  Moritz Bunkus  <moritz@bunkus.org>

        * EbmlMaster: Fixed read() trying to calculate the end position of
        elements with an unknown size. This avoids endless loops and
        assertions in certain cases. See https://trac.bunkus.org/ticket/1089

2013-03-19 mosu
New 1.3.0 version:
    * Note that this version is not binary compatible to its predecessors.
    - Compilation warning fixes
    - GetValue() and SetValue() functions for EbmlFloat/EbmlSInteger/EbmlUInteger
    - GetValue(), SetValue(), GetValueUTF8(), SetValueUTF8() functions for EbmlString/EbmlUnicodeString
    - Date values use 64bit integers
    - Integer conversion operators were made 'const'
    - GetElementList() function for EbmlMaster providing a reference to the underlying std::vector<> for better interaction with the C++ standard library
    - New constructor for UTFstring taking a single std::wstring
    - Increased library .so name to .4 due to binary incompatible changes.
    - Removed the Debian build files from our package.

2011-09-23 robux4/mosu
New 1.2.2 version:
    - fix usage of the DEBUG #define (use LIBEBML_DEBUG instead)