@@ -2,6 +2,10 @@
 
         * Released v1.3.1.
 
+        * EbmlElement::Render(): doesn't catch exceptions anymore. Instead
+        exceptions generated from the IOCallback class (e.g. if a write
+        failed) are propagated to the caller.
+
 2014-12-21  Moritz Bunkus  <moritz@bunkus.org>
 
         * build system: switched the build system from hand-crafted
